--- a/laravel/Homestead.yaml
+++ b/laravel/Homestead.yaml
@@ -1,9 +1,9 @@
 ---
 ip: "192.168.10.10"
-memory: 2048
+memory: 1024
 cpus: 1
-hostname: code
-name: code
+hostname: mediaskate
+name: mediaskate
 provider: virtualbox
 
 authorize: ~/.ssh/id_rsa.pub
