Added IDE autocomplete

--- a/laravel/nbproject/project.properties
+++ b/laravel/nbproject/project.properties
@@ -1,4 +1,7 @@
-include.path=${php.global.include.path}
+file.reference.mediaskate-ide_configs=../ide_configs
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.mediaskate-ide_configs}
 php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
