--- a/laravel/.gitignore
+++ b/laravel/.gitignore
@@ -1,14 +1,14 @@
 # Laravel
-node_modules
-public/storage
-vendor
+/node_modules
+/public/storage
+/vendor
 .idea
 .env
 
 # Homestead
-.vagrant
-Homestead.json
-#Homestead.yaml
+/.vagrant
+/Homestead.json
+#/Homestead.yaml
 
 # Netbeans project
-nbproject/private
+/nbproject/private
