--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -15,7 +15,9 @@
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "laravel/homestead": "^3.0"
+        "laravel/homestead": "^3.0",
+        "barryvdh/laravel-ide-helper": "^2.2",
+        "doctrine/dbal": "^2.5"
     },
     "autoload": {
         "classmap": [
