Set PHPCS fixer to PSR2 (Netbeans)

--- a/laravel/nbproject/project.properties
+++ b/laravel/nbproject/project.properties
@@ -1,3 +1,6 @@
+auxiliary.org-netbeans-modules-php-phpcsfixer.level=psr2
+auxiliary.org-netbeans-modules-php-phpcsfixer.use-global=false
+auxiliary.org-netbeans-modules-php-phpcsfixer.use-project=true
 file.reference.mediaskate-ide_configs=../ide_configs
 include.path=\
     ${php.global.include.path}:\
