--- a/laravel/nbproject/project.properties
+++ b/laravel/nbproject/project.properties
@@ -3,8 +3,7 @@ auxiliary.org-netbeans-modules-php-phpcsfixer.use-global=false
 auxiliary.org-netbeans-modules-php-phpcsfixer.use-project=true
 file.reference.mediaskate-ide_configs=../ide_configs
 include.path=\
-    ${php.global.include.path}:\
-    ${file.reference.mediaskate-ide_configs}
+    ${php.global.include.path}
 php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
