--- a/laravel/nbproject/project.properties
+++ b/laravel/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
 auxiliary.org-netbeans-modules-php-phpcsfixer.level=psr2
 auxiliary.org-netbeans-modules-php-phpcsfixer.use-global=false
 auxiliary.org-netbeans-modules-php-phpcsfixer.use-project=true
