--- a/laravel/nbproject/project.properties
+++ b/laravel/nbproject/project.properties
@@ -1,4 +1,8 @@
 auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-php-phpcsfixer.level=psr2
 auxiliary.org-netbeans-modules-php-phpcsfixer.use-global=false
 auxiliary.org-netbeans-modules-php-phpcsfixer.use-project=true
