--- a/laravel/public/.htaccess
+++ b/laravel/public/.htaccess
@@ -4,6 +4,7 @@
     </IfModule>
 
     RewriteEngine On
+    RewriteBase /~mtancoigne/mediaskate/laravel/public/
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
