--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -18,7 +18,9 @@
         "symfony/dom-crawler": "3.1.*",
         "laravel/homestead": "^3.0",
         "barryvdh/laravel-ide-helper": "^2.2",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "friendsofphp/php-cs-fixer": "^1.12",
+        "squizlabs/php_codesniffer": "^2.7"
     },
     "autoload": {
         "classmap": [
